src/test/deca/context/invalid/class/invalid_field_access_not_a_field.deca
// Description:
//    Access to a protected object field in main
//    Test rule 3.66
//
// Result:
// [Begin Result]
//invalid_field_access_not_a_field.deca:21:18: The identifier is not a field. Rule 3.65.
// [End Result]
//
// History:
//    created on 15/01/2025

class Dummy {
    int method(){

    }
}

{
    Dummy dummy = new Dummy();
    int d = dummy.method;
}
